[gd_scene load_steps=4 format=3 uid="uid://cplbcigb3cswd"]

[ext_resource type="PackedScene" uid="uid://bai5jlefsqxej" path="res://screens/settings/abstract_settings_page.tscn" id="1_8hehf"]
[ext_resource type="Script" path="res://screens/settings/binaries.gd" id="1_o0ngn"]
[ext_resource type="PackedScene" uid="uid://4bdusnu4wfvt" path="res://screens/settings/default_binaries.tscn" id="3_rct4n"]

[node name="Binaries" instance=ExtResource("1_8hehf")]
script = ExtResource("1_o0ngn")
page_name = "SETTINGS_BINARIES_PAGE"

[node name="VBoxContainer" parent="." index="0"]
layout_mode = 3
offset_bottom = 442.0

[node name="DefaultBinaries" parent="VBoxContainer" index="0" instance=ExtResource("3_rct4n")]
anchors_preset = 0
anchor_right = 0.0
offset_right = 1600.0
offset_bottom = 126.0
grow_horizontal = 1

[node name="Button" type="Button" parent="VBoxContainer" index="1"]
offset_top = 132.0
offset_right = 1600.0
offset_bottom = 178.0
text = "SETTINGS_ADD_BINARY"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" index="2"]
offset_top = 184.0
offset_right = 1600.0
offset_bottom = 190.0

[node name="Label" type="Label" parent="VBoxContainer" index="3"]
offset_top = 196.0
offset_right = 1600.0
offset_bottom = 234.0
text = "SETTINGS_BINARY_NONE"
horizontal_alignment = 1

[node name="None" type="VBoxContainer" parent="VBoxContainer" index="4"]
offset_top = 240.0
offset_right = 1600.0
offset_bottom = 240.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" index="5"]
offset_top = 246.0
offset_right = 1600.0
offset_bottom = 252.0

[node name="Label2" type="Label" parent="VBoxContainer" index="6"]
offset_top = 258.0
offset_right = 1600.0
offset_bottom = 296.0
text = "SETTINGS_BINARY_GODOT_3"
horizontal_alignment = 1

[node name="Godot3" type="VBoxContainer" parent="VBoxContainer" index="7"]
offset_top = 302.0
offset_right = 1600.0
offset_bottom = 302.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer" index="8"]
offset_top = 308.0
offset_right = 1600.0
offset_bottom = 314.0

[node name="Label3" type="Label" parent="VBoxContainer" index="9"]
offset_top = 320.0
offset_right = 1600.0
offset_bottom = 358.0
text = "SETTINGS_BINARY_GODOT_4"
horizontal_alignment = 1

[node name="Godot4" type="VBoxContainer" parent="VBoxContainer" index="10"]
offset_top = 364.0
offset_right = 1600.0
offset_bottom = 364.0

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer" index="11"]
offset_top = 370.0
offset_right = 1600.0
offset_bottom = 376.0

[node name="Label4" type="Label" parent="VBoxContainer" index="12"]
offset_top = 382.0
offset_right = 1600.0
offset_bottom = 420.0
text = "SETTINGS_BINARY_OTHER"
horizontal_alignment = 1

[node name="Other" type="VBoxContainer" parent="VBoxContainer" index="13"]
offset_top = 426.0
offset_right = 1600.0
offset_bottom = 426.0
